panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_function__test_error_redefinition_of_local_with_same_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_same_type.c
---
success: false
exit_code: 101
----- stdout -----

----- stderr -----
Error: duplicate declaration for `x`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_same_type.c:3:9]
   │
 2 │     int x = 42;
   │         ┬  
   │         ╰── previously defined here
 3 │     int x = 27;
   │         ┬  
   │         ╰── duplicate definition
───╯
thread 'main' panicked at panko/src/main.rs:47:9:
not yet implemented: not all diagnostics are fatal
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
